--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,16 @@ ul {
     color: #ffffff;
 }
 
-a, a:hover, a:active, a:visited {
-     color: white;
-     text-decoration: none;
-     font-weight: 30;
-     padding: 3%;
+a, a:active, a:visited {
+    color: #d1cfcf;
+    text-decoration: none;
+    font-weight: 30;
+    padding: 3%;
+}
+
+
+a:hover {
+    color: #ffffff;
 }
 
 .nav > a >img{
