--- a/styles.css
+++ b/styles.css
@@ -74,4 +74,89 @@ h2 {
     height: 400px;
 }
 
+img {
+    border-radius: 50%;
+    height: 140px;
+    width: auto;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    padding-left: 100px;
+    padding-right: 100px;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: justify;
+    font-size: large;
+}
+
+.left {
+    float: left;
+    width: 50%;
+}
+
+.name {
+    display: flex;
+    flex-direction: row;
+    padding-left: 100px;
+    color: #ffffff;
+    justify-content: space-between;
+    align-items: center;
+    font-size: larger;
+}
+
+.title {
+    padding-left: 100px;
+    color: #ffffff;
+}
+
+.image {
+    float: right;
+}
+
+.credit-inputs::placeholder {
+    color: #dddcdc;
+}
+
+.register {
+    padding-top: 50px;
+}
+
+input[type=text] {
+    width:100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #5d5d5d;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: #5d5d5d;
+}
+
+.checkbox {
+    background-color: #5d5d5d;
+}
+
+input[type=submit] {
+    width: 100%;
+    padding: 12px 20px;
+    border: 1px solid #5412d9;
+    border-radius: 4px;
+    background-color: #5412d9;
+    color: white;
+    font-size: larger;
+    letter-spacing: 2px;
+}
+
+.form {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: auto;
+    width: 35%;
+}
+
+
 
