--- a/styles.css
+++ b/styles.css
@@ -74,18 +74,19 @@ h2 {
     height: 400px;
 }
 
-img {
+.profile {
     border-radius: 50%;
     height: 140px;
     width: auto;
     padding-top: 25px;
     padding-bottom: 25px;
+    margin-left: 40px;
 }
 
 .flex {
     display: flex;
     flex-direction: row;
-    padding-right: 100px;
+    padding-right: 50px;
     color: #ffffff;
     text-transform: uppercase;
     text-align: justify;
@@ -95,6 +96,7 @@ img {
 .left {
     float: left;
     width: 50%;
+    padding-left: 100px;
 }
 
 .name {
